revision 26 - 20100630                                              |
    * Bumped QSpeedTest revision to r26                             |
    * Bumped QSpeedTestCLI revision to r5                           |
    * QSpeedTest r26: Fixed a small stop button bug                 |


revision 25 - 20100630                                              |
    * Bumped QSpeedTest revision to r25                             |
    * Bumped QSpeedTestCLI revision to r4                           |
    * Both: Always check for updated target list first              |
    * Both: New method for measuring downloaded bytes from each file|
      host. No global variable and QMutex are needed. Hopefully it  |
      will solve the "outrageously big speeds reported" bug         |


revision 24 - 20100630                                              |
    * Bumped QSpeedTest revision to r24                             |
    * Bumped QSpeedTestCLI revision to r3                           |
    * Both: Fixed a small bug which led to not downloading an       |
      available online update of the target list                    |
    * Both: Instead of overwriting an existing target list with a   |
      new update, the old list gets renamed with an additional .bak |
      extension                                                     |
    * Updated embedded target list                                  |


revision 23 - 20100629                                              |
    * QSpeedTestCLI r2: cosmetic changes                            |
    * QSpeedTest r23: cosmetic changes                              |
    * Both: Access total bytes downloaded global variable only after|
      mutex locking. Perhaps this will solve the occasional bug of  |
      the outrageously big download speeds                          |
    * Both: Two discrete download speed tests, one targets domestic |
      servers and the other international servers                   |